fixed some  spacing

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* Self Summary */
 .self-card {
-    width: 700px;
+    width: 75%;
     height: 360px;
     border-radius: 30px;
     background: #e0e0e0;
@@ -49,7 +49,7 @@ header {
 
 /* Style for navigation bar */
 nav {
-    margin-right: 100px ;
+    margin-right: 5% ;
 }
 
 
@@ -97,7 +97,7 @@ nav ul li a:hover {
 /* Title styles */
 .BigName  {
     font-family:monospace;
-    font-size: 73px;
+    font-size: 5vw;
     color:black;
     letter-spacing: -5px;
     margin-left: 10px;
@@ -105,7 +105,7 @@ nav ul li a:hover {
 }
 
 .title {
-    font-size: 25px;
+    font-size: 1.9vw;
     margin-bottom: 10px;
     color:#24233b;
     font-family: monospace;
@@ -114,7 +114,7 @@ nav ul li a:hover {
 
 /* Paragraph styles */
 .self-summary {
-    font-size: 18px;
+    font-size: 1.25vw;
     line-height: 1.5;
     color: #24233b;
     font-family:monospace;
@@ -248,13 +248,13 @@ nav ul li a:hover {
 /* Project Section */
 .project-content{
     margin-left: 10%;
-    margin-top: 70px;
+    margin-bottom: 9%;
 }
 .project {
     --font-color: #323232;
     --bg-color: #e0e0e0;
     width: 80%;
-    height: 700px;
+    height: 95vh;
     border-radius: 20px;
     background: rgba(16, 86, 82, .5);
     box-shadow: -9px 9px 18px #5a5a5a,
@@ -276,15 +276,15 @@ nav ul li a:hover {
   
   .project__img {
     width: 100%;
-    height: 100%;
+    max-height: 72%;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    background-color:aliceblue;
-  }
+    background-color: aliceblue;
+}
 
   .project__img_tic{
     width: 100%;
-    height: 70%;
+    height: 100%;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
     background-color:aliceblue;
@@ -292,35 +292,36 @@ nav ul li a:hover {
   }
   
   .card__descr-wrapper {
-    padding: 15px;
     display: grid;
   }
   
   .project__title {
     color: var(--font-color);
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 2%; /* Adjust as needed */
     font-weight: 900;
-    font-size: 30px;
-  }
+    font-size: 2vw; /* Set font size as 3% of viewport width */
+    margin-top: 2%;
+}
   
   .project_descr {
     color: var(--font-color);
+
   }
 
   .svg {
-    width: 25px;
-    height: 25px;
+    width: 2vw;
+    height: 2vh;
     transform: translateY(25%);
     fill: var(--font-color);
   }
   
   .card__links {
-    margin-top: 20px;
+    margin-top: 1%;
     display: flex;
     align-self: flex-end;
     justify-content: end;
-    margin-bottom: 20px;
+    margin-bottom: 2%;
   }
   
   .card__links .link {
@@ -328,6 +329,7 @@ nav ul li a:hover {
     font-weight: 600;
     font-size: 15px;
     text-decoration: none;
+    margin-bottom: 2%;
   }
   
   .card__links .link:hover {
@@ -343,7 +345,7 @@ nav ul li a:hover {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 83%;
     height: 75px;
-    padding: 12px;
+    padding: 1%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -351,9 +353,10 @@ nav ul li a:hover {
     background-color: #e0e0e0;
     border-radius: 8px;
     box-shadow: 0px 0px 10px -3px #111;
-    margin-top: 60px;
-    margin-left: 63px; /* Auto margin for left and right */
+    margin-top: 3%;
+    margin-left: 5%; /* Auto margin for left and right */
     margin-right: auto; /* Auto margin for left and right */
+    margin-bottom: 6%;
     transition: transform 0.3s ease;
 }
 
@@ -391,15 +394,19 @@ nav ul li a:hover {
   }
 
   #education {
-    align-items: center;
-    justify-content: center;
-    margin-left: 200px;
+    position: relative;
+    align-items: center; /* Vertically center */
+    justify-content: center; /* Horizontally center */
     font-family: 'Nunito', sans-serif;
+    margin-left: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
 }
 
 .school-container {
     position: relative;
-    width: 900px;
+    width: 90%;
     height: 400px;
     margin-top: 50px;
   }
@@ -407,12 +414,12 @@ nav ul li a:hover {
   
   .education-card {
     position: relative;
-    width: 900px;
+    width: 90%;
     height: 400px;
     background:rgba(16, 86, 82, .5);
     border-radius: 8px;
     color: #232323;
-    padding: 16px;
+    padding: 2%;
     border: 1px solid #e0e0e0;
     transition: all .5s ease-in-out;
     overflow: hidden;
